--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executable
  (public_name spml)
  (name main)
- (libraries lexer parser))
+ (libraries lexer parser common lexical syntactics semantics))
