--- a/lib/dune
+++ b/lib/dune
@@ -21,7 +21,7 @@
  (modules syntactics)
  (preprocess
   (pps ppx_sexp_conv))
- (libraries lexical sexplib))
+ (libraries common lexical sexplib))
 
 (menhir
  (modules parser)
@@ -45,4 +45,11 @@
  (modules semantics)
  (preprocess
   (pps ppx_sexp_conv))
- (libraries syntactics typing sexplib))
+ (libraries syntactics typing sexplib ir))
+
+(library
+ (name ir)
+ (modules ir)
+ (preprocess
+  (pps ppx_sexp_conv))
+ (libraries common sexplib))
