--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executable
  (public_name spml)
  (name main)
- (libraries parse common lexical syntactics semantics))
+ (libraries parse common lexical syntactics semantics ir_lisp))
