--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,6 @@
 (executable
  (public_name spml)
  (name main)
- (libraries lexer parser common lexical syntactics semantics))
+ (libraries lexer)
+ ; (libraries lexer parser common lexical syntactics semantics)
+ )
