embeded an full functional cish to mips compiler for code generation, start to implant a stack ir

--- a/bin/dune
+++ b/bin/dune
@@ -3,4 +3,5 @@
  (name main)
  (libraries lexer parse semantics)
  ; (libraries lexer parser common lexical syntactics semantics)
+ (package sparkle-lang)
  )
