--- a/bin/dune
+++ b/bin/dune
@@ -1,7 +1,12 @@
 (executable
  (public_name spml)
  (name main)
- (libraries lexer parse semantics)
+ (libraries lexer parse lexical semantics ir_cnv)
  ; (libraries lexer parser common lexical syntactics semantics)
- (package sparkle-lang)
- )
+ (package sparkle-lang))
+
+(executable
+ (name testmips)
+ (public_name testmmips)
+ (libraries mmips)
+ (package mmips))
